minor fix scrollbar css

--- a/src/app/styl/views/misc.styl
+++ b/src/app/styl/views/misc.styl
@@ -48,16 +48,16 @@ scrollable()
     -webkit-overflow-scrolling touch
 
     &::-webkit-scrollbar
-        width 8px
+        width 5px
 
     &::-webkit-scrollbar-track
         background-color $ScrollBarBg
-        border-radius 6px
+        border-radius 2px
+        margin: 5px 0
 
     &::-webkit-scrollbar-thumb
         background-color $ScrollBarThumb
-        border-radius 6px
-        box-shadow 0 1px 3px rgba(0,0,0,0.3)
+        border-radius 2px
 
         &:hover
             background-color: $ScrollBarThumbHover
